appId: com.avmillabs.brdg
---
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"
      - waitForAnimationToEnd
- runFlow:
    when:
      visible: "OK"
    commands:
      - tapOn: "OK"
      - waitForAnimationToEnd
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
      - waitForAnimationToEnd
